Add neural Lyapunov output feedback paper

--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
 
 		<!-- <script id="pubs_selected" language="text">
 			<font color="black">(* indicates equal contribution)</font><br><hr> -->
+			<div class="row">
+				<div class="col-md-3">
+					<img class="img-fluid img-rounded" src="files/paper/icml.png" style="border:1px solid black" alt="">
+				</div>
+				<div class="col-md-9">
+				<b><font color="black">Lyapunov-stable Neural Control for State and Output Feedback: A Novel Formulation for Efficient Synthesis and Verification</font></b><br>
+				<u>Lujie Yang</u>*, Hongkai Dai*, Zhouxing Shi, Cho-Jui Hsieh, Russ Tedrake, Huan Zhang
+				<br>
+				<b><font color="navy">Under Review 2024</font></b> <br>
+				<!-- <a href="https://arxiv.org/abs/2306.14079" target="_blank"> <small>[Paper]</small></a>
+				<a href="https://github.com/hjsuh94/score_po" target="_blank"> <small>[Code]</small></a> -->
+                </div>
+			</div><hr>
 
             <div class="row">
 				<div class="col-md-3">
@@ -200,6 +213,7 @@
 				<a href="https://sites.google.com/view/global-planning-contact/home" target="_blank"> <small>[Project]</small></a>
 				<a href="https://ieeexplore.ieee.org/document/10225433" target="_blank"> <small>[Paper]</small></a>
 				<a href="https://github.com/pangtao22/planning_through_contact" target="_blank"> <small>[Code]</small></a>
+				<a href="https://news.mit.edu/2023/ai-technique-robots-manipulate-objects-whole-bodies-0824" target="_blank"> <small>[MIT News]</small></a>
                 </div>
 			</div><hr>
 
