Add best paper award

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 				<b><font color="black">Global Planning for Contact-Rich Manipulation via Local Smoothing of Quasi-Dynamic Contact Models</font></b><br>
 				Tao Pang*, H.J. Terry Suh*, <u>Lujie Yang</u>, Russ Tedrake
 				<br>
-				<b><font color="navy">Transactions on Robotics (T-RO) 2023</font></b> <br>
+				<b><font color="navy">Transactions on Robotics (T-RO) 2023</font>, <font color="firebrick">King-Sun Fu Memorial Best Paper Award Honorable Mention</font></b> <br>
 				<a href="https://sites.google.com/view/global-planning-contact/home" target="_blank"> <small>[Project]</small></a>
 				<a href="https://ieeexplore.ieee.org/document/10225433" target="_blank"> <small>[Paper]</small></a>
 				<a href="https://github.com/pangtao22/planning_through_contact" target="_blank"> <small>[Code]</small></a>
