Add Lyapunov NN paper

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 				<u>Lujie Yang</u>*, Hongkai Dai*, Zhouxing Shi, Cho-Jui Hsieh, Russ Tedrake, Huan Zhang
 				<br>
 				<b><font color="navy">Under Review 2024</font></b> <br>
-				<!-- <a href="https://arxiv.org/abs/2306.14079" target="_blank"> <small>[Paper]</small></a>
-				<a href="https://github.com/hjsuh94/score_po" target="_blank"> <small>[Code]</small></a> -->
+				<a href="https://arxiv.org/abs/2404.07956" target="_blank"> <small>[Paper]</small></a>
+				<a href="https://github.com/Verified-Intelligence/Lyapunov_Stable_NN_Controllers" target="_blank"> <small>[Code]</small></a>
                 </div>
 			</div><hr>
 
@@ -244,7 +244,7 @@
                 </div>
 			</div><hr>
         
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-md-3">
                     <img class="img-fluid img-rounded" src="files/paper/exp_setup.jpeg" style="border:1px solid black" alt="">
                 </div>
@@ -255,7 +255,7 @@
 				<b><font color="navy">IEEE Intelligent Vehicles Symposium (IV) 2020</font></b> <br>
 				<a href="https://ieeexplore.ieee.org/document/9304842" target="_blank"> <small>[Paper]</small></a>
                 </div>
-			</div><hr>
+			</div><hr> -->
 	<br><br>
 
 	<!-- Awards -->
