--- a/index.html
+++ b/index.html
@@ -100,44 +100,19 @@
 	</div><br><br>
 
 
-  <!-- News -->
-	<!-- <div class="container">
-		
-	</div><br><br> -->
-
-
-	<!-- Talks -->
-	<!-- <div class="container">
+	<!-- News -->
+	<div class="container" style="padding-top: 20px; font-size: 17px; width: 1080px">
+		<h3 id="News" style="padding-top: 80px; margin-top: -80px;">News</h3>
 		<ul>
-			<li>[2023/12] Invited Talk at <b>Amazon Science</b></li>
-			<li>[2023/11] Invited Talk at <b>Tsinghua University, <a href="https://iiis.tsinghua.edu.cn/en/" target="_blank">Institute for Interdisciplinary Information Sciences (IIIS)</a></b></li>
-			<li>[2023/10] Invited Talk at <b>IROS 2023 Workshop on <a href="https://sites.google.com/view/iros23-causal-robots/" target="_blank">Causality for Robotics</a></b></li>
-			<li>[2023/09] Invited Talk at <b><a href="https://robotics.illinois.edu/robotics-seminar-series/" target="_blank">Robotics Seminar @ Illinois</a></b>
-			<li>[2023/08] Invited Talk at <b>Stanford Intelligent Systems Laboratory</b></li>
-			<li>[2023/07] Invited Talk at <b>Peking University</b></li>
-			<li>[2023/06] Invited Talk at <b>CVPR 2023 Workshop on <a href="https://sites.google.com/view/ieeecvf-cvpr2023-precognition" target="_blank">Precognition: Seeing through the Future</a></b> <a href="https://www.youtube.com/watch?v=5BvDfA68sJE" target="_blank">[Recording]</a></li>
-			<li>[2023/05] Invited Talk at <b>ICRA 2023 Workshop on <a href="https://deformable-workshop.github.io/icra2023/" target="_blank">Representing and Manipulating Deformable Objects</a></b></li>
-			<div class="talks" style="display:none">
-				<li>[2022/12] Guest Lecture at <b>NYU</b>, Invited Talk at <b>Shanghai AI Laboratory</b></li>
-				<li>[2022/10] Invited Talk at <b>Stanford</b> and <b>UC Berkeley</b></li>
-				<li>[2022/07] Invited Talk at <b>RSS 2022 Workshop on <a href="https://imrss2022.github.io/" target="_blank">Implicit Representations for Robotic Manipulation</a></b> <a href="https://www.youtube.com/watch?v=gawSKjA9skU" target="_blank">[Recording]</a> and <b>ISEE AI</b></li>
-				<li>[2022/06] <b>PhD Thesis Defense at MIT CSAIL</b> <a href="https://www.youtube.com/watch?v=8eof6F4-r0k" target="_blank">[Recording]</a>
-				<li>[2022/04] Invited Talk at <b>Google Research</b></li>
-				<li>[2022/01] Invited Talk at <b>TU Berlin</b></li>
-				<li>[2021/12] Invited Talk at <b>Meta AI Research</b></li>
-				<li>[2021/11] Invited Talk at <b>Toyota Research Institute</b></li>
-				<li>[2021/08] Invited Talk at <b>Wayve.ai</b> and <b>Tsinghua University</b></li>
-				<li>[2021/06] Invited Talk at <b>CVPR 2021 Tutorial on <a href="https://xiaolonw.github.io/graphnnv3/" target="_blank">Learning Representations via Graph-structured Networks</a></b> <a href="https://www.youtube.com/watch?v=ost49rbnI_8&t=7207s" target="_blank">[Recording]</a></li>
-				<li>[2021/05] Invited Talk at <b>ICLR 2021 Workshop on <a href="https://simdl.github.io/overview/" target="_blank">Deep Learning for Simulation</a></b> <a href="https://youtu.be/sfblDZeyjk8" target="_blank">[Recording]</a></li>
-				<li>[2021/04] Invited Talk at <b>Brown University</b></li>
-				<li>[2021/03] Invited Talk at <b>Extrality.ai</b></li>
-				<li>[2020/10] Invited Talk at <b>Stanford</b> and <b>UMass Amherst</b></li>
-				<li>[2020/09] Invited Talk at the <b>University of Toronto</b> <a href="https://www.youtube.com/watch?v=y_j53bkKzq8" target="_blank">[Recording]</a></li>
-			</div>
-			<li style="font-size: 16px">
-				<a href="javascript:toggle_vis('talks')" id="showText">[Show more]</a>
+			<li>
+				[2024/04] Our <a href="https://ieeexplore.ieee.org/document/10225433" target="_blank">T-RO paper</a> got <font color="darkblue"><b>Honorable Mention for 2023 T-RO King-Sun Fu Memorial Best Paper Award of the Year</b></font>.
 			</li>
-		</ul> -->
+			<li>[2024/03] Invited Talk at UIUC <a href="https://thehcalab.web.illinois.edu//" target="_blank">Human-Centered Autonomy Lab</a>.</li>
+			<li>
+				[2023/02] I won the <font color="darkblue"><b>Best Presentation Award</b></font> at <a href="https://lidsconf.mit.edu/2023/program.html" target="_blank">MIT LIDS Student Conference 2023</a>.
+			</li>
+		</ul>
+	</div><br>
 
 	<!-- Publications -->
 	<div class="container">
