--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
 		<h3 id="News" style="padding-top: 80px; margin-top: -80px;">News</h3>
 		<ul>
 			<li>
-				[2024/04] Our <a href="https://ieeexplore.ieee.org/document/10225433" target="_blank">T-RO paper</a> got <font color="darkblue"><b>Honorable Mention for 2023 T-RO King-Sun Fu Memorial Best Paper Award of the Year</b></font>.
+				[2024/04] Our <a href="https://ieeexplore.ieee.org/document/10225433" target="_blank">T-RO paper</a> got <font color="black"><b>Honorable Mention for 2023 T-RO King-Sun Fu Memorial Best Paper Award of the Year</b></font>.
 			</li>
 			<li>[2024/03] Invited Talk at UIUC <a href="https://thehcalab.web.illinois.edu//" target="_blank">Human-Centered Autonomy Lab</a>.</li>
 			<li>
-				[2023/02] I won the <font color="darkblue"><b>Best Presentation Award</b></font> at <a href="https://lidsconf.mit.edu/2023/program.html" target="_blank">MIT LIDS Student Conference 2023</a>.
+				[2023/02] I won the <font color="black"><b>Best Presentation Award</b></font> at <a href="https://lidsconf.mit.edu/2023/program.html" target="_blank">MIT LIDS Student Conference 2023</a>.
 			</li>
 		</ul>
 	</div><br>
