--- a/index.html
+++ b/index.html
@@ -101,15 +101,30 @@
 
 
 	<!-- News -->
+	<!-- <div class="container" style="padding-top: 20px; font-size: 17px; width: 1080px">
+		<h3 id="News" style="padding-top: 80px; margin-top: -80px;">News</h3>
+		<ul>
+			<li>[2024/03] I will be giving a talk on Certifiable Controller Synthesis for Underactuated Robots at <a href="https://nescw.seas.upenn.edu/" target="_blank">Northeast Systems and Control Workshop 2024</a>.</li>
+			<li>
+				[2024/04] Our T-RO paper got <font color="blue"><b>Honorable Mention for 2023 T-RO King-Sun Fu Memorial Best Paper Award of the Year</b></font>.
+			</li>
+			<li>[2024/03] I will be giving a talk at UIUC <a href="https://thehcalab.web.illinois.edu/" target="_blank">Human-Centered Autonomy Lab</a>.(<a href="files/slides/HCA Lab.pdf" target="_blank">Slides</a>)</li>
+			<li>
+				[2023/02] I won the <font color="blue"><b> <a href="https://lidsconf.mit.edu/2023/program.html" target="_blank">Best Presentation Award at MIT LIDS Student Conference 2023</a></b></font>.
+			</li>
+		</ul>
+	</div><br> -->
+
+	<!-- News -->
 	<div class="container" style="padding-top: 20px; font-size: 17px; width: 1080px">
 		<h3 id="News" style="padding-top: 80px; margin-top: -80px;">News</h3>
 		<ul>
 			<li>
-				[2024/04] Our <a href="https://ieeexplore.ieee.org/document/10225433" target="_blank">T-RO paper</a> got <font color="black"><b>Honorable Mention for 2023 T-RO King-Sun Fu Memorial Best Paper Award of the Year</b></font>.
+				[2024/04] Our <a href="https://ieeexplore.ieee.org/document/10225433" target="_blank">T-RO paper</a> got <font color="firebrick"><b>Honorable Mention for 2023 T-RO King-Sun Fu Memorial Best Paper Award of the Year</b></font>.
 			</li>
 			<li>[2024/03] Invited Talk at UIUC <a href="https://thehcalab.web.illinois.edu//" target="_blank">Human-Centered Autonomy Lab</a>.</li>
 			<li>
-				[2023/02] I won the <font color="black"><b>Best Presentation Award</b></font> at <a href="https://lidsconf.mit.edu/2023/program.html" target="_blank">MIT LIDS Student Conference 2023</a>.
+				[2023/02] I won the <font color="firebrick"><b>Best Presentation Award</b></font> at <a href="https://lidsconf.mit.edu/2023/program.html" target="_blank">MIT LIDS Student Conference 2023</a>.
 			</li>
 		</ul>
 	</div><br>
