--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                 My research seeks to enable robots to operate robustly and intelligently, with theoretical guarantees, by combining data-driven and model-based optimization techniques.
 			</p>
 
+			<p> I love playing badminton, visiting museums and writing classical Chinese poetry. Here is a <a href="files/slides/poem.pdf" target="_blank">selected collection of my poems</a>.
+			</p>
+
 			<p>
             <a target="_blank" href="https://scholar.google.com/citations?hl=en&user=oU5haR0AAAAJ"><font color="black"><i class="ai ai-google-scholar ai-lg"></i></font></a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;
             <a target="_blank" href="https://github.com/lujieyang"><font color="black"><i class="fab fa-github fa-lg"></i></font></a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;
@@ -118,11 +121,11 @@
 	<div class="container" style="padding-top: 20px; font-size: 17px; width: 1080px">
 		<h3 id="News" style="padding-top: 80px; margin-top: -80px;">News</h3>
 		<ul>
-			<li>[2024/05] I will be giving a talk on <b>Certifiable Controller Synthesis for Underactuated Robotic Systems</b> at <a href="https://nescw.seas.upenn.edu/" target="_blank">Northeast Systems and Control Workshop 2024</a>.</li>
+			<li>[2024/05] I will be giving a talk on <b>Certifiable Controller Synthesis for Underactuated Robotic Systems</b> at <a href="https://nescw.seas.upenn.edu" target="_blank">Northeast Systems and Control Workshop 2024</a>.</li>
 			<li>
 				[2024/04] Our <a href="https://ieeexplore.ieee.org/document/10225433" target="_blank">T-RO paper</a> got <font color="firebrick"><b>Honorable Mention for 2023 T-RO King-Sun Fu Memorial Best Paper Award of the Year</b></font>.
 			</li>
-			<li>[2024/03] I will be giving a talk at UIUC <a href="https://thehcalab.web.illinois.edu//" target="_blank">Human-Centered Autonomy Lab</a>. (<a href="files/slides/HCA Lab.pdf" target="_blank">Slides</a>) </li>
+			<li>[2024/03] I will be giving a talk at <a href="https://thehcalab.web.illinois.edu" target="_blank">UIUC Human-Centered Autonomy Lab</a>. (<a href="files/slides/HCA Lab.pdf" target="_blank">Slides</a>) </li>
 			<li>
 				[2023/02] I won the <font color="firebrick"><b>Best Presentation Award</b></font> at <a href="https://lidsconf.mit.edu/2023/program.html" target="_blank">MIT LIDS Student Conference 2023</a>.
 			</li>
