Update icml result

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 				<b><font color="black">Lyapunov-stable Neural Control for State and Output Feedback: A Novel Formulation for Efficient Synthesis and Verification</font></b><br>
 				<u>Lujie Yang</u>*, Hongkai Dai*, Zhouxing Shi, Cho-Jui Hsieh, Russ Tedrake, Huan Zhang
 				<br>
-				<b><font color="navy">Under Review 2024</font></b> <br>
+				<b><font color="navy">International Conference on Machine Learning (ICML) 2024</font></b> <br>
 				<a href="https://arxiv.org/abs/2404.07956" target="_blank"> <small>[Paper]</small></a>
 				<a href="https://github.com/Verified-Intelligence/Lyapunov_Stable_NN_Controllers" target="_blank"> <small>[Code]</small></a>
                 </div>
