Change icml title

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	<div class="container" style="padding-top: 20px; font-size: 17px; width: 1080px">
 		<h3 id="News" style="padding-top: 80px; margin-top: -80px;">News</h3>
 		<ul>
-			<li>[2024/05] I will be giving a talk on <b>Certifiable Controller Synthesis for Underactuated Robotic Systems</b> at <a href="https://nescw.seas.upenn.edu" target="_blank">Northeast Systems and Control Workshop 2024</a>.</li>
+			<li>[2024/05] I will be giving a talk on <b>Certifiable Controller Synthesis for Underactuated Robotic Systems</b> at <a href="https://nescw.seas.upenn.edu" target="_blank">Northeast Systems and Control Workshop 2024</a>. (<a href="files/slides/NESCW.pdf" target="_blank">Slides</a>)</li>
 			<li>
 				[2024/04] Our <a href="https://ieeexplore.ieee.org/document/10225433" target="_blank">T-RO paper</a> got <font color="firebrick"><b>Honorable Mention for 2023 T-RO King-Sun Fu Memorial Best Paper Award of the Year</b></font>.
 			</li>
@@ -134,7 +134,7 @@
 					<img class="img-fluid img-rounded" src="files/paper/icml.png" style="border:1px solid black" alt="">
 				</div>
 				<div class="col-md-9">
-				<b><font color="black">Lyapunov-stable Neural Control for State and Output Feedback: A Novel Formulation for Efficient Synthesis and Verification</font></b><br>
+				<b><font color="black">Lyapunov-stable Neural Control for State and Output Feedback: A Novel Formulation</font></b><br>
 				<u>Lujie Yang</u>*, Hongkai Dai*, Zhouxing Shi, Cho-Jui Hsieh, Russ Tedrake, Huan Zhang
 				<br>
 				<b><font color="navy">International Conference on Machine Learning (ICML) 2024</font></b> <br>
