Update icml visual

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 			</li>
 			<li>[2024/03] I will be giving a talk at <a href="https://thehcalab.web.illinois.edu" target="_blank">UIUC Human-Centered Autonomy Lab</a>. (<a href="files/slides/HCA Lab.pdf" target="_blank">Slides</a>) </li>
 			<li>
+				[2023/08] I was featured in <a href="https://cap.csail.mit.edu/engage/spotlights/lujie-yang" target="_blank">MIT CSAIL Spotlight</a>.
+			</li>
+			<li>
 				[2023/02] I won the <font color="firebrick"><b>Best Presentation Award</b></font> at <a href="https://lidsconf.mit.edu/2023/program.html" target="_blank">MIT LIDS Student Conference 2023</a>.
 			</li>
 		</ul>
@@ -131,7 +134,10 @@
 			<font color="black">(* indicates equal contribution)</font><br><hr> -->
 			<div class="row">
 				<div class="col-md-3">
-					<img class="img-fluid img-rounded" src="files/paper/icml.png" style="border:1px solid black" alt="">
+					<!-- <img class="img-fluid img-rounded" src="files/paper/icml.png" style="border:1px solid black" alt=""> -->
+					<video width="100%" playsinline="" autoplay="" loop="" preload="" muted="" style="border:1px solid black">
+                		<source src="files/paper/visual.mp4" type="video/mp4">
+            		</video>
 				</div>
 				<div class="col-md-9">
 				<b><font color="black">Lyapunov-stable Neural Control for State and Output Feedback: A Novel Formulation</font></b><br>
