--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 			<div class="row">
 				<div class="col-md-3">
 					<!-- <img class="img-fluid img-rounded" src="files/paper/icml.png" style="border:1px solid black" alt=""> -->
-					<video width="100%" height="auto" playsinline="" autoplay="" loop="" preload="" muted="" style="border:1px solid black; max-width: 100vw; max-height: 100vh;">
-						<source src="files/paper/visual.mp4" type="video/mp4">
-					</video>
+					<video width="100%" playsinline="" autoplay="" loop="" preload="" muted="" style="border:1px solid black">
+                		<source src="files/paper/visual.mp4" type="video/mp4">
+            		</video>
 				</div>
 				<div class="col-md-9">
 				<b><font color="black">Lyapunov-stable Neural Control for State and Output Feedback: A Novel Formulation</font></b><br>
