Fix video formatting

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 					<video width="100%" playsinline="" autoplay="" loop="" preload="" muted="" style="border:1px solid black">
                 		<source src="files/paper/coctis.mp4" type="video/mp4">
             		</video>
+					<!-- <img class="img-fluid img-rounded" src="files/paper/coctis.png" style="border:1px solid black" alt=""> -->
                 </div>
 				<div class="col-md-9">
 				<b><font color="black">A Tight Semidefinite Relaxation for Linear and Hybrid Optimal Control with Time Scaling</font></b><br>
