Update GCS paper

--- a/index.html
+++ b/index.html
@@ -136,13 +136,12 @@
             <div class="row">
                 <div class="col-md-3">
 					<video width="100%" playsinline="" autoplay="" loop="" preload="" muted="" style="border:1px solid black">
-                		<source src="files/paper/coctis.mp4" type="video/mp4">
+                		<source src="files/paper/tfr.mp4" type="video/mp4">
             		</video>
-					<!-- <img class="img-fluid img-rounded" src="files/paper/coctis.png" style="border:1px solid black" alt=""> -->
                 </div>
 				<div class="col-md-9">
-				<b><font color="black">A Tight Semidefinite Relaxation for Linear and Hybrid Optimal Control with Time Scaling</font></b><br>
-				<u>Lujie Yang</u>, Tobia Marcucci, Russ Tedrake
+				<b><font color="black">A New Semidefinite Relaxation for Linear and Pieceweise-Affine Optimal Control with Time Scaling</font></b><br>
+				<u>Lujie Yang</u>, Tobia Marcucci, Pablo Parrilo, Russ Tedrake
 				<br>
 				<!-- <b><font color="navy">American Control Conference (ACC) 2022</font></b> <br> -->
 				<a href="https://drive.google.com/file/d/1mTzbHKj7gpS8xJRcNrDEFvOwjShzJJvj/view" target="_blank"> <small>[Paper]</small></a>
