Update ICRA paper

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<u>Lujie Yang</u>, Tobia Marcucci, Pablo Parrilo, Russ Tedrake
 				<br>
 				<!-- <b><font color="navy">American Control Conference (ACC) 2022</font></b> <br> -->
-				<a href="https://drive.google.com/file/d/1mTzbHKj7gpS8xJRcNrDEFvOwjShzJJvj/view" target="_blank"> <small>[Paper]</small></a>
+				<a href="files/paper/ICRA_2025.pdf" target="_blank"> <small>[Paper]</small></a>
                 </div>
 			</div><hr>
 			<div class="row">
