--- a/index.html
+++ b/index.html
@@ -83,15 +83,17 @@
 			<br>
 			<p><font style="font-size: 20px"><b>Lujie Yang</b></font></p>
 
-			<p>I am a 5th year PhD student at MIT EECS advised by Prof. <a href="https://groups.csail.mit.edu/locomotion/russt.html" target="_blank">Russ Tedrake</a>. I obtained my bachelor's degree from UC Berkeley, under the mentorship of Prof. <a href="https://vcresearch.berkeley.edu/faculty/francesco-borrelli" target="_blank">Francesco Borrelli</a>.
+			<p>I am a final-year PhD student at MIT EECS advised by Prof. <a href="https://groups.csail.mit.edu/locomotion/russt.html" target="_blank">Russ Tedrake</a>. I obtained my bachelor's degree from UC Berkeley, under the mentorship of Prof. <a href="https://vcresearch.berkeley.edu/faculty/francesco-borrelli" target="_blank">Francesco Borrelli</a>.
 			</p>
 
-			<p>I am interested in the planning and control of robotic systems using <b>Optimization</b> and <b>Control theory</b>.
+			<p>I am interested in the planning and control of robotic systems using optimization, control theory and machine learning.
                 My research seeks to enable robots to operate robustly and intelligently, with theoretical guarantees, by combining data-driven and model-based optimization techniques.
 			</p>
 
 			<p> I love playing badminton, visiting museums and writing classical Chinese poetry. Here is a <a href="files/slides/poem.pdf" target="_blank">selected collection of my poems</a>.
 			</p>
+
+			<p><b> I am seeking a research-oriented position in industry. If you think my expertise aligns with your needs, please feel free to reach out. </b></p>
 
 			<p>
             <a target="_blank" href="https://scholar.google.com/citations?hl=en&user=oU5haR0AAAAJ"><font color="black"><i class="ai ai-google-scholar ai-lg"></i></font></a>&nbsp;&nbsp;&nbsp;/&nbsp;&nbsp;
