--- a/index.html
+++ b/index.html
@@ -135,6 +135,23 @@
 
 		<!-- <script id="pubs_selected" language="text">
 			<font color="black">(* indicates equal contribution)</font><br><hr> -->
+			<div class="row">
+				<div class="col-md-3">
+					<!-- <img class="img-fluid img-rounded" src="files/paper/icml.png" style="border:1px solid black" alt=""> -->
+					<video width="100%" playsinline="" autoplay="" loop="" preload="" muted="" style="border:1px solid black">
+                		<source src="files/paper/gallery_12.mp4" type="video/mp4">
+            		</video>
+				</div>
+				<div class="col-md-9">
+				<b><font color="black">Physics-Driven Data Generation for Contact-Rich Manipulation via Trajectory Optimization</font></b><br>
+				<u>Lujie Yang</u>, H.J. Terry Suh*, Tong Zhao*, Bernhard Paus Græsdal, Tarik Kelestemur, Jiuguang Wang, Tao Pang, Russ Tedrake
+				<br>
+				<!-- <b><font color="navy">International Conference on Machine Learning (ICML) 2025</font></b> <br> -->
+				<a href="https://lujieyang.github.io/physicsgen/" target="_blank"> <small>[Project]</small></a>
+				<a href="https://youtu.be/2-dk7OhBvUw" target="_blank"> <small>[Video]</small></a>
+				<a href="https://arxiv.org/abs/2404.07956" target="_blank"> <small>[Paper]</small></a>
+                </div>
+			</div><hr>
             <div class="row">
                 <div class="col-md-3">
 					<video width="100%" playsinline="" autoplay="" loop="" preload="" muted="" style="border:1px solid black">
@@ -145,7 +162,7 @@
 				<b><font color="black">A New Semidefinite Relaxation for Linear and Pieceweise-Affine Optimal Control with Time Scaling</font></b><br>
 				<u>Lujie Yang</u>, Tobia Marcucci, Pablo Parrilo, Russ Tedrake
 				<br>
-				<!-- <b><font color="navy">American Control Conference (ACC) 2022</font></b> <br> -->
+				<b><font color="navy">International Conference on Robotics and Automation (ICRA) 2025</font></b> <br>
 				<a href="files/paper/ICRA_2025.pdf" target="_blank"> <small>[Paper]</small></a>
                 </div>
 			</div><hr>
