--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 				<!-- <b><font color="navy">International Conference on Machine Learning (ICML) 2025</font></b> <br> -->
 				<a href="https://lujieyang.github.io/physicsgen/" target="_blank"> <small>[Project]</small></a>
 				<a href="https://youtu.be/2-dk7OhBvUw" target="_blank"> <small>[Video]</small></a>
-				<a href="https://arxiv.org/abs/2404.07956" target="_blank"> <small>[Paper]</small></a>
+				<a href="files/paper/RSS_2025.pdf" target="_blank"> <small>[Paper]</small></a>
                 </div>
 			</div><hr>
             <div class="row">
