--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 				<b><font color="black">Physics-Driven Data Generation for Contact-Rich Manipulation via Trajectory Optimization</font></b><br>
 				<u>Lujie Yang</u>, H.J. Terry Suh*, Tong Zhao*, Bernhard Paus Græsdal, Tarik Kelestemur, Jiuguang Wang, Tao Pang, Russ Tedrake
 				<br>
-				<!-- <b><font color="navy">International Conference on Machine Learning (ICML) 2025</font></b> <br> -->
+				<b><font color="navy">Robotics: Science and Systems (RSS) 2025</font></b> <br>
 				<a href="https://lujieyang.github.io/physicsgen/" target="_blank"> <small>[Project]</small></a>
 				<a href="https://youtu.be/2-dk7OhBvUw" target="_blank"> <small>[Video]</small></a>
-				<a href="files/paper/RSS_2025.pdf" target="_blank"> <small>[Paper]</small></a>
+				<a href="https://arxiv.org/abs/2502.20382" target="_blank"> <small>[Paper]</small></a>
                 </div>
 			</div><hr>
             <div class="row">
