Update research statement

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 			<p>I am a final-year PhD student at MIT EECS advised by Prof. <a href="https://groups.csail.mit.edu/locomotion/russt.html" target="_blank">Russ Tedrake</a>. I obtained my bachelor's degree from UC Berkeley, under the mentorship of Prof. <a href="https://vcresearch.berkeley.edu/faculty/francesco-borrelli" target="_blank">Francesco Borrelli</a>.
 			</p>
 
-			<p>I am interested in the planning and control of robotic systems using optimization, control theory and machine learning.
-                My research seeks to enable robots to operate robustly and intelligently, with theoretical guarantees, by combining data-driven and model-based optimization techniques.
+			<p>I am interested in the planning and control of robotic systems through the integration of machine learning, optimization, and control theory. 
+			   I develop algorithms that combine data-driven and model-based optimization techniques to enable highly performant and robust robots, particularly in the context of <b>dexterous, contact-rich manipulation</b>.
 			</p>
 
 			<p> I love playing badminton, visiting museums and writing classical Chinese poetry. Here is a <a href="files/slides/poem.pdf" target="_blank">selected collection of my poems</a>.
