Update ICRA arxiv

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 				<u>Lujie Yang</u>, Tobia Marcucci, Pablo Parrilo, Russ Tedrake
 				<br>
 				<b><font color="navy">International Conference on Robotics and Automation (ICRA) 2025</font></b> <br>
-				<a href="files/paper/ICRA_2025.pdf" target="_blank"> <small>[Paper]</small></a>
+				<a href="https://arxiv.org/pdf/2504.13170" target="_blank"> <small>[Paper]</small></a>
                 </div>
 			</div><hr>
 			<div class="row">
